# arap_dfm

./: .fuse_hidden0000048200000011  CMakeLists.txt  compile.sh  run.sh
data/: 382.off  382_396.vdb  389.off  389.off.vdb  396.off  397.off.vdb  399.off  399.off.vdb  399_389.vdb  400.off.vdb  block.obj.vdb
output_data/: error_noOMP.data  l.txt
python/: .mayavi_plot.py.swp  .run_mayavi.sh.swp  cloud.py  knn.py  mayavi_plot.py  run_mayavi.sh  tps.py
src/: .dense_correspondence.cpp.swp  .main.cpp.swp  .ycm_extra_conf.py  correspondence.h  def_types.h  dense_correspondence.cpp  dense_correspondence.h  find_dense_correspondence.cpp  find_dense_correspondence.h  full_bipartitegraph.h  kdtree.h  main.cpp  mass_transport.cpp  mass_transport.h  morph.cpp  morph.h  network_simplex_simple.h  skeleton.cpp  skeleton.h  thin_plate_spline.cpp  thin_plate_spline.h  types.h  util.h  volume_object.cpp  volume_object.h
